# Geodesics

./: .gitignore  PlotGyroid.py  README.md  astar_2d.py  astar_3d.py  demo_astar.py  demo_conjgrad.py  demo_gyroid.ipynb  dev_geodesic.py  main.py  plot_gyroid.py  plot_shapes.py  plot_torus.py  pyproject.toml  torus_geodesic.m
Demos/: astar_2d.py  astar_3d.py  plot_isosurface.py  tsp.py
MyAlgorithms/: AStar2D.py  AStar3D.py  PlotIsosurface.py
MyLibrary/: MyTools.py  Opps.py  PlotFuncs.py  Shapes.py  UsefulFuncs.py
playground/: PlotGyroid.py  demo_script.py  draw_surface.py  draw_surface_operations.py  find_geodesics.py  surface_operations.py  test_a_star_2d.py  test_a_star_3d.py
src/: PlotFuncs.py  SolveTSP.py  UsefulFuncs.py
src/geodesics/generate_surfaces/: generate_surface.py  implicit_surfaces.py  mesh_to_graph.py  points_to_mesh.py  surface_operations.py  surfaces.py
src/geodesics/graph_search/: __init__.py  _a_star_2d.py  _a_star_3d.py  a_star_2d.py  a_star_3d.py
src/geodesics/plotting/: __init__.py  _animate.py  _implicit_surface.py  _mesh_data.py
tests/: test_a_star_2d.py  test_a_star_3d.py
version_1/: plotting_shapes.py
version_2/: dev.py  example.py  torus.py
