[project]
name = "geodesics"
version = "0.1.0"
description = "trace geodesics on manifolds using numerical search algorithms"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pyvista>=0.45.0",
    "scikit-image>=0.25.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
